Forced extra horizontal space with 100vw padding to ensure finale visibility

--- a/src/components/styles/Work.css
+++ b/src/components/styles/Work.css
@@ -26,7 +26,7 @@
   display: flex;
   height: 100%;
   margin-left: -80px;
-  padding-right: 120px;
+  padding-right: 100vw;
   position: relative;
 }
 .work-box {
